--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="profile-card">
         <div class="profile-header">
-            <img src="https://github.com/benitezcarlo45-ux/22011-WEB101-BENITEZ/blob/cda6f31b6ba1237667192f4d7cbcc79892df28ab/jb.jpg" alt="Profile Picture" class="profile-img"> 
+            <img src="jb.jpg" alt="Profile Picture" class="profile-img"> 
             <h1>John Carlo Benitez</h1>
             <h2>Web Developer & Designer</h2>
         </div>
