--- a/index.html
+++ b/index.html
@@ -9,28 +9,68 @@
 </head>
 <body>
     <div class="profile-card">
+        <!-- Header -->
         <div class="profile-header">
             <img src="jb.jpg" alt="Profile Picture" class="profile-img"> 
             <h1>John Carlo Benitez</h1>
             <h2>Web Developer & Designer</h2>
         </div>
 
+        <!-- Bio -->
         <div class="profile-body">
             <p class="bio">
                 A passionate front-end developer with 5 years of experience creating dynamic and responsive web applications.
                 I specialize in HTML5, CSS3, and JavaScript, with a focus on user experience and clean code.
             </p>
 
+            <!-- Contact -->
             <div class="contact-info">
                 <h3>Contact & Links</h3>
                 <ul>
                     <li><i class="icon email">📧</i> benitezcarlo45@gmail.com</li>
                     <li><i class="icon location">📍</i> Caloocan City</li>
-                
-                    <li>
-                        <a href="https://github.com/benitezcarlo45-ux" target="_blank"><i class="icon github">🐙</i> GitHub</a>
-                    </li>
+                    <li><a href="https://github.com/benitezcarlo45-ux" target="_blank"><i class="icon github">🐙</i> GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/johncarlo-benitez" target="_blank"><i class="icon linkedin">💼</i> LinkedIn</a></li>
+                    <li><a href="https://portfolio-benitez.com" target="_blank"><i class="icon portfolio">🌐</i> Portfolio</a></li>
                 </ul>
+            </div>
+
+            <!-- Skills -->
+            <div class="skills">
+                <h3>Skills</h3>
+                <ul>
+                    <li>💻 HTML5, CSS3, JavaScript (ES6+)</li>
+                    <li>⚛️ React.js & Vue.js</li>
+                    <li>🎨 UI/UX Design (Figma, Adobe XD)</li>
+                    <li>⚙️ Responsive Design & Cross-Browser Compatibility</li>
+                    <li>🔧 Git & GitHub Version Control</li>
+                </ul>
+            </div>
+
+            <!-- Experience -->
+            <div class="experience">
+                <h3>Experience</h3>
+                <ul>
+                    <li><strong>Front-End Developer</strong> – Freelance (2020–Present)</li>
+                    <li><strong>Web Designer</strong> – Creative Studio (2018–2020)</li>
+                    <li><strong>Intern</strong> – Tech Solutions Inc. (2017)</li>
+                </ul>
+            </div>
+
+            <!-- Projects -->
+            <div class="projects">
+                <h3>Projects</h3>
+                <ul>
+                    <li><a href="#">Portfolio Website</a> – Personal showcase of skills and projects.</li>
+                    <li><a href="#">E-commerce Store</a> – Built with React and Firebase.</li>
+                    <li><a href="#">Blog Platform</a> – Responsive design with Node.js backend.</li>
+                </ul>
+            </div>
+
+            <!-- Education -->
+            <div class="education">
+                <h3>Education</h3>
+                <p>Bachelor of Science in Information Technology – University of Caloocan City (2016–2020)</p>
             </div>
         </div>
     </div>
