--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <h3>Contact & Links</h3>
                 <ul>
                     <li><i class="icon email">📧</i> benitezcarlo45@gmail.com</li>
+                     <li><i class="icon phone">📞</i> +63 910 282 5677</li>
                     <li><i class="icon location">📍</i> Caloocan City</li>
                     <li><a href="https://github.com/benitezcarlo45-ux" target="_blank"><i class="icon github">🐙</i> GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/johncarlo-benitez" target="_blank"><i class="icon linkedin">💼</i> LinkedIn</a></li>
