--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <!-- Education -->
             <div class="education">
                 <h3>Education</h3>
-                <p>Bachelor of Science in Information Technology – University of Caloocan City (2028–2035)</p>
+                <p>Bachelor of Science in Information Technology – Bestlink College Of The Phillippines (2025–2026)</p>
+                <p>Currently enrolled in foundational IT courses including programming, systems analysis, and database management.</p>
             </div>
         </div>
     </div>
